# VLM-Post-Training

./: .gitignore  README.md  compare_model_outputs.py  data_processor.py  finetune_CosmosReason2.py  finetune_Gemma4.py  finetune_cosmosreason2_GRPO.py  finetune_cosmosreason2_SFT.py  finetune_cosmosreason2_SFT_no_cot.py  finetune_gemma4.py  gemma4_31B.ipynb  inference_cosmos.py  inference_cosmos_base.py  inference_cosmos_no_cot.py  inference_cosmos_rl.py  inference_cosmos_sft.py  inference_gemma4.py  inference_gemma4_base.py  inference_gemma4_sft.py  pyproject.toml  reward_functions.py  run_cosmos.sbatch  run_gemma4.sbatch
data/: data_processor.py
data/test/: build_results_md.py  build_test_jsonl.py
inference/cosmos_reason_2/: inference_cosmos_base.py  inference_cosmos_no_cot.py  inference_cosmos_rl.py  inference_cosmos_sft.py
inference/gemma4/: inference_gemma4_12B_SFT.py  inference_gemma4_base.py  inference_gemma4_sft.py
plots/: compare_model_outputs.py
sbatch_psc/: run_cosmos.sbatch  run_gemma4.sbatch  run_gemma4_12B.sbatch  run_gemma4_12B_it.sbatch
train/cosmos_reason_2/: finetune_cosmosreason2_GRPO.py  finetune_cosmosreason2_SFT.py  finetune_cosmosreason2_SFT_no_cot.py
train/gemma4/: finetune_gemma4_12B_SFT.py  finetune_gemma4_12B_it_SFT.py  finetune_gemma4_31B_SFT.py
